# MultiGraph

./: Cargo.toml  LICENSE
.claude/: add_license_header.sh  settings.json
src/: context.rs  graph.rs  lib.rs  main.rs
src/compiler/: mod.rs
src/compiler/optimizer/: mod.rs
src/compiler/optimizer/rules/: mod.rs
src/compiler/parser/: mod.rs
src/engine/: context.rs  mod.rs  traverser.rs
src/engine/data_flow/: group_id.rs  message.rs  mod.rs
src/engine/data_flow/steps/: has_property.rs  in_e.rs  in_v.rs  mod.rs  out_e.rs  out_v.rs  scalar_filter.rs  traits.rs  vec_source.rs  where_enter.rs  where_exit.rs
src/engine/logical_step/: mod.rs
src/engine/volcano/: builder.rs  mod.rs
src/engine/volcano/steps/: count.rs  has_property.rs  in_e.rs  in_v.rs  mod.rs  out_e.rs  out_v.rs  (+5 more)
src/schema/: definition.rs  mod.rs
src/server/: mod.rs
src/storage/: graph_store.rs  mod.rs
src/storage/cache/: lru.rs  mod.rs
src/storage/distributed/: mod.rs
src/storage/rocks/: encoding.rs  graph.rs  mod.rs  store.rs
src/store/: mod.rs  traits.rs
src/store/distributed/: batch.rs
src/store/rocks/: encoding.rs  graph.rs  mod.rs  store.rs  transaction.rs
src/transaction/: dirty_cache.rs  id_gen.rs  mod.rs  overlay.rs  tx.rs
src/traversal/: context.rs  group_id.rs  message.rs  mod.rs  path.rs  pipeline.rs  traverser.rs
src/traversal/iterators.rs/: has_property.rs  mod.rs  out_e.rs  traits.rs  where_enter.rs  where_exit.rs
src/traversal/step/: mod.rs
src/types/: element.rs  error.rs  full.rs  full_element.rs  gvalue.rs  keys.rs  label.rs  mod.rs  prop_key.rs
(+9 files in other folders)
