[package]
    authors     = ["Austin Han <austinhan1024@gmail.com>"]
    description = "A Gremlin-compatible property graph engine"
    edition     = "2021"
    license     = "BUSL-1.1"
    name        = "multigraph"
    version     = "0.1.0"

[dependencies]

    serde      = { version = "1.0", features = ["derive"] }
    serde_json = "1.0"

    # Compact inline strings (≤22 bytes stack-allocated)
    smol_str = "0.2"

    # Ordered hash map — preserves insertion order, needed for GValue::Map
    # Pinned to 2.1.x — the 2.2+ series adopted edition 2024 which needs rustc ≥ 1.85
    indexmap = "=2.1.0"

    # LRU cache for SharedStoreCache
    lru = "0.12"

    # RwLock used for SharedStoreCache shards
    parking_lot = "0.12"

    # Inline vec for Traverser labels: stack-allocates ≤2 label strings with no heap
    smallvec = "1"

    # RocksDB storage backend
    rocksdb = "0.22"

[dev-dependencies]
    tempfile = "3"
